<package format="2">
  <name>rqt_topic</name>
  <version>1.7.1</version>
  <description>rqt_topic provides a GUI plugin for displaying debug information about ROS topics including publishers, subscribers, publishing rate, and ROS Messages.</description>

  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>

  <license>BSD</license>

  <!-- Some tests are ASL 2.0 -->
  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/rqt_topic</url>
  <url type="repository">https://github.com/ros-visualization/rqt_topic</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_topic/issues</url>

  <author email="audrow@openrobotics.org">Audrow Nash</author>
  <author>Dirk Thomas</author>
  <author>Dorian Scholz</author>
  <author email="scott@openrobotics.org">Scott K Logan</author>

  <depend version_gte="0.2.19">python_qt_binding</depend>
  <depend>rclpy</depend>
  <depend>ros2topic</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>rqt_py_common</depend>
  <depend>python3-pydantic</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
